# DashboardAuditoria

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: backend.md  ceo.md  code-reviewer.md  orchestrator.md  pesquisador-automotivo.md  qa-testing.md  security-auditor.md  sql-engineer.md  uxui-frontend.md
.claude/templates/: ceo-feedback.md  orchestrator-instruction.md  pesquisador-suggestion.md  reviewer-parecer.md  security-parecer.md
.github/workflows/: ci.yml
backend/: README.md
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: connection.py
backend/app/repositories/: report_repository.py
backend/app/schemas/: health.py  report.py
backend/app/services/: report_service.py
backend/scripts/: check_mysql_connection.py
backend/tests/: conftest.py
backend/tests/unit/: test_atividades_de_auditoria_contract.py  test_auditorias_planejadas_charts.py  test_auditorias_planejadas_kpis.py  test_auditorias_planejadas_pii.py  test_auditorias_realizadas_pii.py  test_cors.py  test_database_connection.py  test_health_route.py  test_report_service.py  test_reports_route.py
database/views/mysql/: atividades_completas.sql  atividades_de_auditoria.sql  auditorias_planejadas.sql  auditorias_realizadas.sql  audits_kpi_base.sql  audits_kpi_base_by_sector.sql  nao_conformidade.sql  ocorrencias_com_e_sem_atividade.sql  ocorrencias_com_indicador.sql  ocorrencias_ff.sql
docs/: data_dictionary_reports.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.js  vite.config.ts
frontend/e2e/: charts-responsiveness.spec.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: InfoTip.tsx  (+2 more)
(+25 files in other folders)
