[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard-magna-backend"
version = "0.1.0"
description = "Backend for Magna dashboards and reports"
readme = "AGENTS.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pymysql>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
    "bandit[toml]>=1.7,<2.0",
    "httpx>=0.27,<1.0",
    "mypy>=1.11,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.6,<1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = ["S101"]
"backend/tests/unit/test_database_connection.py" = ["S106"]
"backend/app/core/config.py" = ["S104", "S105"]
"backend/app/services/report_service.py" = ["S608"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
plugins = []
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["pymysql", "pymysql.cursors", "pymysql.err"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["backend/tests"]
skips = ["B101"]
